# tito.ai

./: .gitmodules  LICENSE.md  README.md  compose.yaml
backend/: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  Dockerfile.uv  README.md  __init__.py  cli.py  main.py  pyproject.toml  requirements.txt  runner.py
backend/app/Core/Config/: __init__.py  bot.py  server.py
backend/app/Core/Exceptions/: handlers.py
backend/app/Core/Parsers/: bot_config_parser.py
backend/app/Http/DTOs/: campaign_schemas.py  error_schemas.py  schemas.py
backend/app/Http/Routes/: assistants.py  calls.py  campaigns.py
backend/app/Http/Webhooks/: receiver.py
backend/app/Services/: __init__.py  assistant_store.py  calcom_api.py  campaign_service.py  runner_service.py  webhook_sender.py
backend/app/Utils/: analysis.py  audio.py  daily.py  flow_loader.py
backend/bots/: __init__.py  base_bot.py  flow.py  simple.py  smart_endpointing.py
backend/config/: bot.py
backend/docker/: Dockerfile
backend/docs/: Tito_AI_API.postman_collection.json  Tito_AI_Environment.postman_environment.json
backend/prompts/: __init__.py  flow.py  helpers.py  simple.py  types.py
backend/resources/data/assistants/: 087f8d4c-7526-4dfe-8db5-bb4c4f33e81f.json  22f0a80a-f618-4d74-acf5-79b5b6ff7275.json  2f6bb841-62e7-4f1a-acd9-024a5d336224.json  4a8c4cce-7889-4ca4-8acd-0418dfc4c169.json  56768b6c-97ca-4882-a1c0-7055de97957e.json  (+13 more)
backend/runners/: __init__.py  asterisk_runner.py  bot_runner.py
backend/scripts/: dev.sh  lint.sh  setup.sh
backend/services/: __init__.py
(+33 files in other folders)
